fixing dark mode again

--- a/home.css
+++ b/home.css
@@ -299,6 +299,17 @@ body.dark-mode .control-center-container {
   color: #ddd;
 }
 body.dark-mode .widget-button { background-color: #333; color: #eee; }
+
+body.dark-mode .header-wrapper select{
+  padding: 6px 12px;
+  border-radius: 8px;
+  border: none;
+  background-color: #333;
+  color: #ddd;
+  cursor: pointer;
+  font-size: 14px;
+}
+
 body.dark-mode .sidebar{
   background-color: #222;
   
